--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -1,7 +1,7 @@
 # Custom Language File for Launcher Customizer
 
 [ejs.app]
-title = "Cursed Land's Launcher"
+title = "Cursed Lands Launcher"
 
 [ejs.landing]
 mediaGitHubURL = "https://github.com/FRErlingx/CLL"
